Wireframes branch - Request Form Completed. Mini View Initiated

--- a/client/web-components-client/src/app/app.component.html
+++ b/client/web-components-client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <!-- Main content -->
       <section class="content">
-        <app-user-registration></app-user-registration>
+        <app-request-form></app-request-form>
       </section>
       <!-- /.content -->
     </div>
