Wireframe added for Request Mini View

--- a/client/web-components-client/src/app/app.component.html
+++ b/client/web-components-client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <!-- Main content -->
       <section class="content">
-        <app-request-form></app-request-form>
+        <app-request-mini-view></app-request-mini-view>
       </section>
       <!-- /.content -->
     </div>
