--- a/client/web-components-client/src/app/request-mini-view/request-mini-view.component.html
+++ b/client/web-components-client/src/app/request-mini-view/request-mini-view.component.html
@@ -1,3 +1,36 @@
-<p>
-  request-mini-view works!
-</p>
+<div class="row">
+    <div class="col-sm-8">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Request Title</h3><img align="right" src="../favicon.ico">
+        </div>
+        <form class="form-horizontal">
+            <div class="box-body">
+              <div class="form-group">
+                <label for="departmentName" class="col-sm-2 control-label">Department</label>
+
+                <div class="col-sm-8">
+                    <h5>Department Name Here</h5>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="lastUpdatedTimestamp" class="col-sm-2 control-label">Last Updated</label>
+
+                <div class="col-sm-8">
+                    <h5>Last Updated Timestamp Here</h5>
+                </div>
+              </div>
+              <div class="form-group">
+                  <label for="lastUpdatedTimestamp" class="col-sm-2 control-label" align="right">Vote</label>
+  
+                  <div class="col-sm-8">
+                      <img align="right" src="../assets/icons/like.png">
+                      <img align="right" src="../assets/icons/dislike.png">
+                  </div>
+                </div>
+              
+            </div>
+          </form>
+      </div>
+    </div>
+  </div>
