Wireframe for request expanded view added

--- a/client/web-components-client/src/app/app.component.html
+++ b/client/web-components-client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <!-- Main content -->
       <section class="content">
-        <app-request-mini-view></app-request-mini-view>
+        <app-request-expanded-view></app-request-expanded-view>
       </section>
       <!-- /.content -->
     </div>
