New user registration component prepared

--- a/client/web-components-client/src/app/app.component.html
+++ b/client/web-components-client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <!-- Main content -->
       <section class="content">
-        <app-login></app-login>
+        <app-register></app-register>
       </section>
       <!-- /.content -->
     </div>
