Added basic routing with wireframes of dashboard, filters, sections

--- a/client/web-components-client/src/app/app.component.html
+++ b/client/web-components-client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container">
       <!-- Main content -->
       <section class="content">
-        <app-user-registration></app-user-registration>
+        <router-outlet></router-outlet>
       </section>
       <!-- /.content -->
     </div>
